# sequential-group-composition

./: .gitignore  README.md  pyproject.toml  sweep_results
docs/: refactoring_notes.md
gagf/rnns/: config.yaml  optimizer_comparison_analysis.ipynb  run_sweep.py  seq_mlp_group_size.ipynb  train.py
notebooks/: Assumption 4.2.ipynb  Binary composition with Cn.ipynb  RNN.ipynb  cn.ipynb  cnxcn.ipynb  discrete_se2.ipynb  dn.ipynb  scaling_experiments.ipynb  sequential_cnxcn.ipynb  znxznxc4.ipynb  znxznxcm.ipynb
notebooks/data/: scaling_sweep_lightweight.npz
runs_data/A5/: config.yaml  param_save_indices.npy  power_data.npz  train_loss_history.npy  w_dominant_irrep_fraction.npz
runs_data/C11/: config.yaml  power_data.npz  train_loss_history.npy  w_dominant_irrep_fraction.npz
runs_data/C5xC5/: config.yaml  power_data.npz  train_loss_history.npy  w_dominant_irrep_fraction.npz
runs_data/D5/: config.yaml  power_data.npz  train_loss_history.npy  w_dominant_irrep_fraction.npz
runs_data/Oh/: config.yaml  (+4 more)
scripts/: extract_escnn_data.py
src/: config.yaml  config_a5.yaml  config_c11.yaml  dataset.py  main.py  model.py  optimizer.py  power.py  run_sweep.py  sweep_analysis.py  template.py  train.py  viz.py
test/: test_config.yaml  test_config_a5.yaml  test_config_c10.yaml  test_config_c4x4.yaml  test_config_d3.yaml  test_config_octahedral.yaml  test_dataset.py  test_discrete_se2.py  test_fourier.py  test_group_escnn.py  test_main.py  test_model.py  test_notebooks.py  test_optimizer.py  test_power.py  test_refactor_equivalence.py  test_run_sweep.py  test_sweep_example.yaml  test_sweep_learning_rate.yaml  test_sweep_model_size.yaml  test_sweep_onehot_grid.yaml  test_template.py  test_viz_power.py
(+45 files in other folders)
